Bug 157525 - REGRESSION: AM/PM in wrong place
Summary: REGRESSION: AM/PM in wrong place
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-clock (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-02-09 15:49 UTC by James Richard Tyrer
Modified: 2008-11-18 03:14 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
KDE-4.0.1 (3.81 KB, image/png)
2008-02-09 15:56 UTC, James Richard Tyrer
Details
KDE-TRUNK (4.29 KB, image/png)
2008-02-09 16:20 UTC, James Richard Tyrer
Details
Screen Shot showing the problem (85.68 KB, image/png)
2008-09-11 19:15 UTC, James Richard Tyrer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description James Richard Tyrer 2008-02-09 15:49:40 UTC
Version:            (using Devel)
Installed from:    Compiled sources
Compiler:          GCC-4.1.2 
OS:                Linux

This works in the current release but not in TRUNK.

AM/PM is displayed centered on a second line rather than after the time.  This appears to be font related but doesn't work with standard fonts.
Comment 1 James Richard Tyrer 2008-02-09 15:56:47 UTC
Created attachment 23500 [details]
KDE-4.0.1
Comment 2 James Richard Tyrer 2008-02-09 16:20:44 UTC
Created attachment 23502 [details]
KDE-TRUNK
Comment 3 James Richard Tyrer 2008-02-21 04:14:14 UTC
This currently appears to work in TRUNK as well as the 4.0 BRANCH.
Comment 4 James Richard Tyrer 2008-02-22 02:02:07 UTC
Well, I spoke too soon.

This is in both TRUNK *and* the release BRANCH

It appears to work fine if the widget is on the panel.

It works correctly if you open a widget on the desktop.

However, if you enlarge the desktop widget, then the AM/PM jumps back under the time.

Since this occurs on both TRUNK & BRANCH, it might be a different problem in the code.
Comment 5 Anne-Marie Mahfouf 2008-07-02 15:05:06 UTC
James, can you have a look if the bug is still there please as we fixed some things in Digital Clock last week-end. Thanks!

Anne-Marie
Comment 6 James Richard Tyrer 2008-07-02 22:58:55 UTC
Again, this is only on a desktop widget.

If you show seconds and enlarge the clock widget, you reach a point where AM/PM moves below the time.

If you don't show seconds, it appears to work OK.
Comment 7 James Richard Tyrer 2008-09-11 19:15:00 UTC
Created attachment 27372 [details]
Screen Shot showing the problem

This is r859254 and I find that the problem also occurs on a Panel if the Panel is large enough.  This is a vertical right edge panel.

Also, please not that the date font is a bit small.
Comment 8 Sebastian Kügler 2008-11-18 03:14:52 UTC
SVN commit 885889 by sebas:

Force the time of the clock onto a single line

BUG:157525

 M  +3 -3      clock.cpp  
 M  +1 -1      clock.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=885889