Force the time of the clock onto a single line

BUG:157525

svn path=/trunk/KDE/kdebase/workspace/; revision=885889